--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -12,7 +12,7 @@
 
 
       <li class="nav-item">
-        <a routerLink="/portfolio/details" routerLinkActive="active" class="nav-link">
+        <a routerLink="/portfolio" routerLinkActive="active" class="nav-link">
           <i class="fas fa-clipboard-list"></i>
           Portfolio</a>
       </li>
