--- a/src/app/components/pie-chart/pie-chart.component.html
+++ b/src/app/components/pie-chart/pie-chart.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card shadow">
   <div class="card-body">
     <h5 class="card-title">$ by Coin</h5>
     <div id="pie-chart"></div>
