update edit portfolio pg

--- a/src/app/components/add-coin/add-coin.component.html
+++ b/src/app/components/add-coin/add-coin.component.html
@@ -2,13 +2,13 @@
   <div class="card-body">
     <form (submit)="handleSubmit($event); addCoin.reset();" #addCoin="ngForm">
       <div class="form-group">
-        <label for="id">Asset</label>
+        <label for="asset">Asset</label>
         <input
           list="coins"
           spellcheck="false"
           [(ngModel)]="model.id"
-          id="id"
-          name="id"
+          id="asset"
+          name="asset"
           type="text"
           placeholder="bitcoin"
           class="form-control"
