--- a/src/app/components/portfolio-table/portfolio-table.component.html
+++ b/src/app/components/portfolio-table/portfolio-table.component.html
@@ -6,6 +6,7 @@
   [scrollbarH]="false"
   [headerHeight]="50"
   [footerHeight]="100"
+  [sorts]="[{prop: 'value', dir: 'desc'}]"
   [rowHeight]="'auto'"
   [columnMode]="'force'"
   trackByProp="symbol"
