--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,10 @@ a, a:active, a:hover, a:focus {
   outline: none;
 }
 
+.nav-link {
+  cursor: pointer;
+}
+
 h1, h2, h3, h4, h5, h6 {
 
   font-weight: 700;
