--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,24 +1,15 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-  <a class="navbar-brand" routerLink="/portfolio">Alt Folio</a>
+<nav class="my-2 py-1 bg-white">
+  <ul class="nav d-inline-flex justify-content-center align-items-center">
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop"
-          aria-controls="navbarTop" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <li class="nav-item p-2">
+      <a routerLink="/portfolio" routerLinkActive="active" class="nav-link ">
+        <i class="fas fa-clipboard-list"></i>
+        Portfolio</a>
+    </li>
 
-  <div class="collapse navbar-collapse" id="navbarTop">
-    <ul class="nav">
+    <li class="nav-item p-2"><a routerLink="/market" class="nav-link " routerLinkActive="active">
+      <i class="fas fa-chart-line"></i>
+      Market</a></li>
 
-
-
-      <li class="nav-item">
-        <a routerLink="/portfolio" routerLinkActive="active" class="nav-link">
-          <i class="fas fa-clipboard-list"></i>
-          Portfolio</a>
-      </li>
-      <li class="nav-item"><a routerLink="/market" class="nav-link" routerLinkActive="active">
-        <i class="fas fa-chart-line"></i>
-        Market</a></li>
-    </ul>
-  </div>
+  </ul>
 </nav>
