--- a/src/app/pages/portfolio-summary/portfolio-summary.component.html
+++ b/src/app/pages/portfolio-summary/portfolio-summary.component.html
@@ -1,12 +1,20 @@
-<div class="my-3 row">
-  <div class="col-md-8">
-    <div class="card shadow">
-      <div class="card-body">
-        <app-portfolio-table></app-portfolio-table>
+<div *ngIf="!portfolioService.marketData.length">
+  <app-loading-spinner></app-loading-spinner>
+</div>
+<div *ngIf="portfolioService.marketData.length && !portfolioService.portfolio.length">
+
+  No portfolio
+</div>
+
+<div class="my-3 row" *ngIf="portfolioService.marketData.length && portfolioService.portfolio.length">
+    <div class="col-md-8">
+      <div class="card shadow">
+        <div class="card-body">
+          <app-portfolio-table></app-portfolio-table>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col-md-4">
-    <app-pie-chart></app-pie-chart>
-  </div>
+    <div class="col-md-4">
+      <app-pie-chart></app-pie-chart>
+    </div>
 </div>
