--- a/src/app/components/edit-portfolio/edit-portfolio.component.html
+++ b/src/app/components/edit-portfolio/edit-portfolio.component.html
@@ -1,6 +1,5 @@
-<main class="d-flex justify-content-center">
-
-  <div class="my-3 card" [style.maxWidth]="'800px'">
+<main class="d-flex justify-content-center align-items-center">
+  <div class="my-3 card" [style.width]="'30rem'">
     <div class="card-body">
       <table
         id="editPortfolio"
@@ -11,6 +10,7 @@
         </tbody>
       </table>
       <div class="row my-3 d-flex justify-content-center align-items-center">
+
         <button
           class="btn btn-outline-danger"
           (click)="portfolioService.deleteCoins()"
